fix: improve hyphenation and readability in titles and subtitles across multiple languages

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -17,3 +17,9 @@ $text: black;
         scroll-margin-top: $navbar-height;
     }
 }
+
+body {
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+}
